feat(customer): implement customer management service and add customer module

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>banking-api</module>
         <module>banking-account</module>
         <module>banking-transaction</module>
+        <module>banking-customer</module>
     </modules>
     
     <properties>
