--- a/banking-customer/pom.xml
+++ b/banking-customer/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>banking-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
