--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>banking-account</module>
         <module>banking-transaction</module>
         <module>banking-customer</module>
+        <module>banking-deposit</module>
     </modules>
     
     <properties>
