--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>banking-account</module>
         <module>banking-transaction</module>
         <module>banking-customer</module>
-        <module>banking-support</module>
+        <module>customer-support</module>
         <module>banking-persistence</module>
         <module>banking-deposit</module>
         <module>banking-cli</module>
