--- a/banking-deposit/pom.xml
+++ b/banking-deposit/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>banking-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+            <version>1.5.0</version>
+            <scope>provided</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -33,6 +39,12 @@
             <version>5.5.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
@@ -43,9 +55,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Activator>com.bank.deposit.Activator</Bundle-Activator>
-                        <Import-Package>com.bank.api,org.osgi.framework</Import-Package>
+                        <Import-Package>*</Import-Package>
                         <Private-Package>com.bank.deposit</Private-Package>
+                        <_dsannotations>*</_dsannotations>
                     </instructions>
                 </configuration>
             </plugin>
